--- a/app/design/frontend/base/default/template/sales/order/history.phtml
+++ b/app/design/frontend/base/default/template/sales/order/history.phtml
@@ -24,53 +24,87 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
-<?php $_orders = $this->getOrders(); ?>
-<div class="page-title">
-    <h1><?php echo $this->__('My Orders') ?></h1>
-</div>
-<?php echo $this->getPagerHtml(); ?>
-<?php if($_orders->getSize()): ?>
-<table class="data-table" id="my-orders-table">
-    <col width="1" />
-    <col width="1" />
-    <col />
-    <col width="1" />
-    <col width="1" />
-    <col width="1" />
-    <thead>
-        <tr>
-            <th><?php echo $this->__('Order #') ?></th>
-            <th><?php echo $this->__('Date') ?></th>
-            <th><?php echo $this->__('Ship To') ?></th>
-            <th><span class="nobr"><?php echo $this->__('Order Total') ?></span></th>
-            <th><span class="nobr"><?php echo $this->__('Order Status') ?></span></th>
-            <th>&nbsp;</th>
-        </tr>
-    </thead>
-    <tbody>
-        <?php $_odd = ''; ?>
-        <?php foreach ($_orders as $_order): ?>
-        <tr>
-            <td><?php echo $_order->getRealOrderId() ?></td>
-            <td><span class="nobr"><?php echo $this->formatDate($_order->getCreatedAtStoreDate()) ?></span></td>
-            <td><?php echo $_order->getShippingAddress() ? $this->htmlEscape($_order->getShippingAddress()->getName()) : '&nbsp;' ?></td>
-            <td><?php echo $_order->formatPrice($_order->getGrandTotal()) ?></td>
-            <td><em><?php echo $_order->getStatusLabel() ?></em></td>
-            <td class="a-center">
+
+f
+<!--  -->
+<div class="page page_club">
+    <!--  -->
+    <div class="club_login">
+        <div class="club_tit">
+            <h2>Ecoupon<br />information</h2>
+        </div>
+        <p class="club_ecoupon_txt">For system reason,  E coupon information will be synchronized after 24 hours later. </p>
+        <div class="club_ecoupon_center cs-clear">
+            <div class="club_ecoupon_nav">
+                <div class="club_welcome">
+                    <?php echo $this->__("Hi")?> <?php echo Mage::getSingleton('customer/session')->getCustomer()->getFirstname();?> ! <?php echo $this->__("Welcome to Lily Club")?> <br /> <?php echo $this->__("Your remaining points")?> <br /><?php echo $this->__("are %s point(s)", Mage::getSingleton('customer/session')->getCustomer()->getUsePoints())  ?>
+                </div>
+                <a class="club_logout" href="club_login.html"><?php echo $this->__("LOGOUT")?></a>
+                <div class="club_navlist">
+                    <a href="<?php echo $this->getUrl("customer/account/edit/")?>"><?php echo $this->__("Account informations")?></a>
+                    <a href="<?php echo $this->getUrl("sales/order/history/")?>"><?php echo $this->__("Gift history")?></a>
+                    <a href="<?php echo $this->getUrl("wishlist")?>"><?php echo $this->__("My wishlist")?></a>
+                    <a href="<?php echo $this->getUrl("customer/account/point/")?>"><?php echo $this->__("Point informations")?></a>
+                    <a href="<?php echo $this->getUrl("customer/account/ecoupon/")?>" class=""><?php echo $this->__("E-coupon")?></a>
+                </div>
+            </div>
+            <?php $ecoupon_data = $this->getEcouponData(); ?>
+            <div class="club_ecoupon_com">
+
+                <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
+                <?php $_orders = $this->getOrders(); ?>
+                <div class="page-title">
+                    <h1><?php echo $this->__('My Orders') ?></h1>
+                </div>
+                <?php echo $this->getPagerHtml(); ?>
+                <?php if($_orders->getSize()): ?>
+                    <table class="data-table" id="my-orders-table">
+                        <col width="1" />
+                        <col width="1" />
+                        <col />
+                        <col width="1" />
+                        <col width="1" />
+                        <col width="1" />
+                        <thead>
+                        <tr>
+                            <th><?php echo $this->__('Order #') ?></th>
+                            <th><?php echo $this->__('Date') ?></th>
+                            <th><?php echo $this->__('Ship To') ?></th>
+                            <th><span class="nobr"><?php echo $this->__('Order Total') ?></span></th>
+                            <th><span class="nobr"><?php echo $this->__('Order Status') ?></span></th>
+                            <th>&nbsp;</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <?php $_odd = ''; ?>
+                        <?php foreach ($_orders as $_order): ?>
+                            <tr>
+                                <td><?php echo $_order->getRealOrderId() ?></td>
+                                <td><span class="nobr"><?php echo $this->formatDate($_order->getCreatedAtStoreDate()) ?></span></td>
+                                <td><?php echo $_order->getShippingAddress() ? $this->htmlEscape($_order->getShippingAddress()->getName()) : '&nbsp;' ?></td>
+                                <td><?php echo $_order->formatPrice($_order->getGrandTotal()) ?></td>
+                                <td><em><?php echo $_order->getStatusLabel() ?></em></td>
+                                <td class="a-center">
                 <span class="nobr"><a href="<?php echo $this->getViewUrl($_order) ?>"><?php echo $this->__('View Order') ?></a>
                     <?php /*<span class="separator">|</span><a href="<?php echo $this->getTrackUrl($_order) ?>"><?php echo $this->__('Track Order') ?></a>&nbsp;*/ ?>
                     <?php if ($this->helper('sales/reorder')->canReorder($_order)) : ?>
-                    <span class="separator">|</span> <a href="<?php echo $this->getReorderUrl($_order) ?>" class="link-reorder"><?php echo $this->__('Reorder') ?></a>
-                <?php endif ?>
+                        <span class="separator">|</span> <a href="<?php echo $this->getReorderUrl($_order) ?>" class="link-reorder"><?php echo $this->__('Reorder') ?></a>
+                    <?php endif ?>
                 </span>
-            </td>
-        </tr>
-        <?php endforeach; ?>
-    </tbody>
-</table>
-<script type="text/javascript">decorateTable('my-orders-table');</script>
-<?php echo $this->getPagerHtml(); ?>
-<?php else: ?>
-    <p><?php echo $this->__('You have placed no orders.'); ?></p>
-<?php endif ?>
+                                </td>
+                            </tr>
+                        <?php endforeach; ?>
+                        </tbody>
+                    </table>
+                    <script type="text/javascript">decorateTable('my-orders-table');</script>
+                    <?php echo $this->getPagerHtml(); ?>
+                <?php else: ?>
+                    <p><?php echo $this->__('You have placed no orders.'); ?></p>
+                <?php endif ?>
+            </div>
+        </div>
+    </div>
+    <!--  -->
+</div>
+
+
