--- a/app/design/frontend/default/default/layout/customer.xml
+++ b/app/design/frontend/default/default/layout/customer.xml
@@ -209,6 +209,7 @@ New customer registration
         <update handle="customer_account"/>
         <reference name="root">
             <action method="setHeaderTitle" translate="title" module="customer"><title>Edit Account Info</title></action>
+            <action method="setTemplate"><template>page/1column2.phtml</template></action>
         </reference>
         <reference name="my.account.wrapper">
             <block type="customer/form_edit" name="customer_edit" template="customer/form/edit.phtml"/>
