http://www.lily-collection.com/giftproducts.html/

--- a/app/design/frontend/base/default/template/points/page/html/breadcrumbs.phtml
+++ b/app/design/frontend/base/default/template/points/page/html/breadcrumbs.phtml
@@ -42,7 +42,7 @@
             </li>
         <?php endforeach; ?>
     </ul>
-	<?php echo $this->getChildHtml('pointsSearch') ?>
-	<?php echo $this->getChildHtml('points_type_search') ?>
+//	<?php echo $this->getChildHtml('pointsSearch') ?>
+//	<?php echo $this->getChildHtml('points_type_search') ?>
 </div>
 <?php endif; ?>
