--- a/app/design/frontend/default/default/template/page/1column2.phtml
+++ b/app/design/frontend/default/default/template/page/1column2.phtml
@@ -42,6 +42,10 @@
     <?php echo $this->getChildHtml('content') ?>
 </div>
 
+<div class="footer">
+    <?php echo $this->getChildHtml('footer') ?>
+</div>
+
 <?php echo $this->getChildHtml('pageloading') ?>
 <?php echo $this->getAbsoluteFooter() ?>
 </body>
