--- a/app/design/frontend/default/default/template/page/2columns-left_cat.phtml
+++ b/app/design/frontend/default/default/template/page/2columns-left_cat.phtml
@@ -30,39 +30,22 @@
  */
 ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<?php echo $this->getLang() ?>" lang="<?php echo $this->getLang() ?>">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<?php echo $this->getLang() ?>" lang="<?php echo $this->getLang() ?>"  id="top">
 <head>
-<?php echo $this->getChildHtml('head') ?>
+    <?php echo $this->getChildHtml('head') ?>
 </head>
 <body<?php echo $this->getBodyClass()?' class="'.$this->getBodyClass().'"':'' ?>>
 <?php echo $this->getChildHtml('after_body_start') ?>
-<div class="wrapper">
-    <?php echo $this->getChildHtml('global_notices') ?>
-    <div class="page">
-        <?php echo $this->getChildHtml('header') ?>
-        <div class="main-container col2-left-layout">
-            <div class="main">
-                <?php echo $this->getChildHtml('breadcrumbs') ?>
-                
-			<div class="product-essential">
-			<div class="col-left sidebar"><?php echo $this->getChildHtml('left') ?></div>
-				<div class="col-main">
-                    <?php echo $this->getChildHtml('global_messages') ?>
-        
-                    <?php echo $this->getChildHtml('content') ?>
-                </div>
-            </div>
-			
-				<div class="instruction">
-<?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('instruction')->toHtml(); ?>
-	
-	</div>
-            </div>
-        </div>
-        <?php echo $this->getChildHtml('footer') ?>
-        <?php echo $this->getChildHtml('before_body_end') ?>
-    </div>
+
+<?php echo $this->getChildHtml('header') ?>
+<div class="wrap">
+    <?php echo $this->getChildHtml('content') ?>
 </div>
+
+<div class="footer">
+    <?php echo $this->getChildHtml('footer') ?>
+</div>
+<?php echo $this->getChildHtml('pageloading') ?>
 <?php echo $this->getAbsoluteFooter() ?>
 </body>
 </html>
