--- a/skin/frontend/default/default/css/j2t/ajax_cart.css
+++ b/skin/frontend/default/default/css/j2t/ajax_cart.css
@@ -20,7 +20,8 @@ div.j2t-cart-bts {    bottom: 0;
 
 div.j2tajax-confirm, div.j2tajax-progress{
 	z-index: 199;
-    text-align:center;box-shadow:0 0 4px #2280DA
+    text-align:center;
+    border:1px solid #000;
 }
 div.j2tajax-confirm{padding:20px 20px 90px}
 div.j2tajax-progress{padding:100px 30px; z-index: 199;}
@@ -40,42 +41,29 @@ div.j2t-overlay{
 
 a.j2t-checkout-link{
 
-	background: #6dcdd9; /* Old browsers */
-background: -moz-linear-gradient(left,  #6dcdd9 0%, #91b5ef 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, right top, color-stop(0%,#6dcdd9), color-stop(100%,#91b5ef)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(left,  #6dcdd9 0%,#91b5ef 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(left,  #6dcdd9 0%,#91b5ef 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(left,  #6dcdd9 0%,#91b5ef 100%); /* IE10+ */
-background: linear-gradient(to right,  #6dcdd9 0%,#91b5ef 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6dcdd9', endColorstr='#91b5ef',GradientType=1 ); /* IE6-9 */
-
+	border:1px solid #000;
     display: block;
     float: right;
     font-size:12px;
     line-height: 34px; /* This value + 4px + 4px (top and bottom padding of SPAN) must equal height of button background (default is 24px) */
     height: 34px; /* Height of button background height */
-    padding-left: 11px; /* Width of left menu image */
+    padding: 0 11px; /* Width of left menu image */
     text-decoration: none;
     margin-right:10px;
 }
 
 a:link.j2t-checkout-link, a:visited.j2t-checkout-link, a:active.j2t-checkout-link{
-    color: #fff; /*button text color*/
+    color: #000; /*button text color*/
 }
 
 a.j2t-checkout-link span{
     display: block;
     padding:0 12px 0 0; /*Set 11px below to match value of 'padding-left' value above*/
-	font-size:17px;
+	font-size:14px;
 }
 
 a.j2t-checkout-link:hover{ /* Hover state CSS */
 
-}
-
-a.j2t-checkout-link:hover span{ /* Hover state CSS */
-    background-position: bottom right;
-    color: #2280DA;
 }
 
 
@@ -90,19 +78,11 @@ a.j2t-continue-link{
     font-size:12px;
     line-height: 34px; /* This value + 4px + 4px (top and bottom padding of SPAN) must equal height of button background (default is 24px) */
     height: 34px; /* Height of button background height */
-    padding-left: 11px; /* Width of left menu image */
+    padding:0 20px; /* Width of left menu image */
     text-decoration: none;
     margin-left:10px;
-	
-	background: #6dcdd9; /* Old browsers */
-background: -moz-linear-gradient(left,  #6dcdd9 0%, #91b5ef 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, right top, color-stop(0%,#6dcdd9), color-stop(100%,#91b5ef)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(left,  #6dcdd9 0%,#91b5ef 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(left,  #6dcdd9 0%,#91b5ef 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(left,  #6dcdd9 0%,#91b5ef 100%); /* IE10+ */
-background: linear-gradient(to right,  #6dcdd9 0%,#91b5ef 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6dcdd9', endColorstr='#91b5ef',GradientType=1 ); /* IE6-9 */
-
+	border:1px solid #000;
+    color:#000;
 }
 .j2tajax-checkout-txt{    background: url("images/add_success.gif") no-repeat scroll 60px top rgba(0, 0, 0, 0);
     font-size: 14px;
@@ -110,13 +90,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6dcdd9', end
     padding-left: 130px;
     padding-top: 10px;}
 a:link.j2t-continue-link, a:visited.j2t-continue-link, a:active.j2t-continue-link{
-    color: #fff; /*button text color*/
+    color: #000; /*button text color*/
 }
 
 a.j2t-continue-link span{
-	font-size:17px;
+	font-size:14px;
     display: block;
-    padding: 0 12px 0 0; /*Set 11px below to match value of 'padding-left' value above*/
 }
 
 a.j2t-continue-link:hover{ /* Hover state CSS */
@@ -125,7 +104,7 @@ a.j2t-continue-link:hover{ /* Hover state CSS */
 
 a.j2t-continue-link:hover span{ /* Hover state CSS */
     background-position: bottom right;
-    color: #2280DA;
+    color: #000;
 }
 
 span.j2t-upsells-list-wrapper {display:block; text-align:left;height:100px;}
@@ -150,7 +129,7 @@ div.j2tajax-confirm {min-height:190px !important;}
     font-size: 14px;
     font-weight: normal;
 }
-div.j2tajax-progress, div.j2tajax-confirm {background:url("images/gardient_bg.gif") no-repeat scroll 0 0 #fff;width:500px!important;}
+div.j2tajax-progress, div.j2tajax-confirm {background:#fff;width:500px!important;}
 div.j2t-closing-button { text-align:right;
     cursor: pointer;
     font-family: arial;
