--- a/app/design/frontend/base/default/template/lily/customer/form/activate.phtml
+++ b/app/design/frontend/base/default/template/lily/customer/form/activate.phtml
@@ -1,4 +1,4 @@
-<div class="account-create">
+111<div class="account-create">
 	<div class="page-title">
         <h1><?php echo $this->__('Activate an Account') ?></h1>
     </div>
