--- a/app/design/frontend/default/default/template/customer/account/dashboard.phtml
+++ b/app/design/frontend/default/default/template/customer/account/dashboard.phtml
@@ -36,7 +36,7 @@
                 <div class="club_welcome">
                     <?php echo $this->__("Hi")?> <?php echo $this->getCustomer()->getFirstname();?> ! <?php echo $this->__("Welcome to Lily Club")?> <br /> <?php echo $this->__("Your remaining points")?> <br /><?php echo $this->__("are %s point(s)", $this->getCustomer()->getUsePoints())  ?>  
                 </div>
-                <a class="club_logout" href="club_login.html"><?php echo $this->__("LOGOUT")?></a>
+                <a class="club_logout" href="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>customer/account/logout/"><?php echo $this->__("LOGOUT")?></a>
                 <div class="club_navlist">
                     <a href="<?php echo $this->getUrl("customer/account/edit/")?>"><?php echo $this->__("Account informations")?></a>
                     <a href="<?php echo $this->getUrl("sales/order/history/")?>"><?php echo $this->__("Gift history")?></a>
