--- a/app/design/frontend/default/default/template/page/html/header.phtml
+++ b/app/design/frontend/default/default/template/page/html/header.phtml
@@ -68,8 +68,7 @@
 	    </ul>
         <a class='menu'></a>
         <div class="language">
-            <a href="javascript:;" class="lang_en"></a>
-            <a href="javascript:;" class="lang_cn"></a>
+            <?php echo $this->getChildHtml("store_language")?>
         </div>
         <div class="search"></div>
     </div>
